--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,213 @@
+absl-py==0.11.0
+aiofiles==22.1.0
+aiosqlite==0.18.0
+alembic==1.8.1
+altair==4.2.2
+aniso8601==9.0.1
+anyio==3.6.2
+appdirs==1.4.4
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asgiref==3.2.10
+asttokens==2.2.1
+astunparse==1.6.3
+attrs==22.1.0
+Babel==2.12.1
+backcall==0.2.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.12.2
+bleach==6.0.0
 blinker==1.6.2
-click==8.1.3
-Flask==2.2.5
+cachetools==4.2.0
+certifi==2020.12.5
+cffi==1.15.1
+chardet==4.0.0
+charset-normalizer==3.1.0
+click==8.1.6
+colorama==0.4.6
+comm==0.1.3
+cryptography==40.0.1
+cycler==0.10.0
+debugpy==1.6.7
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.6
+Django==3.0.8
+dnspython==2.2.1
+easygui==0.98.2
+email-validator==1.1.3
+entrypoints==0.4
+exceptiongroup==1.1.3
+executing==1.2.0
+fastjsonschema==2.16.3
+filelock==3.10.7
+fix-yahoo-finance==0.1.37
+Flask==2.3.2
+Flask-Login==0.5.0
+Flask-Migrate==3.1.0
+flask-restx==0.5.1
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+flatbuffers==1.12
+fqdn==1.5.1
+frozendict==2.3.6
+gast==0.3.3
+gitdb==4.0.10
+GitPython==3.1.31
+google-auth==1.24.0
+google-auth-oauthlib==0.4.2
+google-pasta==0.2.0
+greenlet==2.0.1
+grpcio==1.32.0
 gunicorn==20.1.0
+h5py==2.10.0
+html5lib==1.1
+idna==2.10
+imageio==2.9.0
+importlib-metadata==5.0.0
+importlib-resources==5.10.0
+iniconfig==2.0.0
+ipykernel==6.22.0
+ipython==8.12.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.6
+isoduration==20.11.0
 itsdangerous==2.1.2
+jedi==0.18.2
 Jinja2==3.1.2
-joblib==1.2.0
-MarkupSafe==2.1.2
+joblib==1.0.0
+json5==0.9.11
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.6.3
+jupyter-server==1.24.0
+jupyter-ydoc==0.2.3
+jupyter_client==8.1.0
+jupyter_core==5.3.0
+jupyter_server_fileid==0.8.0
+jupyter_server_terminals==0.4.4
+jupyter_server_ydoc==0.8.0
+jupyterlab==3.6.3
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.7
+jupyterlab_server==2.22.0
+keras==2.12.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+lxml==4.9.2
+Mako==1.2.3
+Markdown==3.3.3
+markdown-it-py==2.2.0
+MarkupSafe==2.1.1
+matplotlib==3.3.4
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mistune==2.0.5
+multitasking==0.0.11
+mysqlclient @ file:///C:/Users/Raj/Downloads/mysqlclient-1.4.6-cp38-cp38-win_amd64.whl
+nbclassic==0.5.5
+nbclient==0.7.3
+nbconvert==7.3.0
+nbformat==5.8.0
+nest-asyncio==1.5.6
+notebook==6.5.4
+notebook_shim==0.2.2
 numpy==1.24.4
-pickle-mixin==1.0.2
-scikit-learn==1.0.2
-scipy==1.7.3
-threadpoolctl==3.1.0
-Werkzeug==2.2.3
+oauthlib==3.1.0
+opencv-python==4.5.1.48
+opt-einsum==3.3.0
+packaging==23.0
+pandas==1.5.3
+pandas-datareader==0.10.0
+pandocfilters==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==8.1.0
+pkgutil_resolve_name==1.3.10
+platformdirs==3.2.0
+pluggy==1.2.0
+prometheus-client==0.16.0
+prompt-toolkit==3.0.38
+protobuf==3.14.0
+psutil==5.9.4
+pure-eval==0.2.2
+pyarrow==11.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydeck==0.8.0
+Pygments==2.14.0
+Pympler==1.0.1
+PyOpenGL==3.1.7
+PyOpenGL-accelerate==3.1.7
+pyparsing==2.4.7
+pyrsistent==0.19.2
+pytest==7.4.0
+pytest-flask==1.2.0
+python-dateutil==2.8.2
+python-decouple==3.4
+python-json-logger==2.0.7
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+pywin32==306
+pywinpty==2.0.10
+PyYAML==6.0
+pyzmq==25.0.2
+qtconsole==5.4.3
+QtPy==2.3.1
+requests==2.28.2
+requests-oauthlib==1.3.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.3.3
+rsa==4.7
+scikit-learn==0.24.1
+scipy==1.6.0
+seaborn==0.12.2
+Send2Trash==1.8.0
+six==1.15.0
+sklearn==0.0
+smmap==5.0.0
+sniffio==1.3.0
+soupsieve==2.4
+SQLAlchemy==1.4.23
+sqlparse==0.3.1
+stack-data==0.6.2
+streamlit==1.21.0
+tensorboard==2.4.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.4.0
+tensorflow-estimator==2.4.0
+termcolor==1.1.0
+terminado==0.17.1
+threadpoolctl==2.1.0
+tinycss2==1.2.1
+tkcalendar==1.6.1
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.0
+tornado==6.2
+traitlets==5.9.0
+typing-extensions==3.7.4.3
+tzdata==2023.3
+tzlocal==4.3
+uri-template==1.2.0
+urllib3==1.26.2
+validators==0.20.0
+virtualenv==20.21.0
+watchdog==3.0.0
+wcwidth==0.2.6
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.5.1
+Werkzeug==2.3.6
+widgetsnbextension==4.0.7
+wrapt==1.12.1
+WTForms==2.3.3
+y-py==0.5.9
+yfinance==0.2.14
+ypy-websocket==0.8.2
+zipp==3.10.0
